# notion-ai-ideas-enhancer

./: README.md  pyproject.toml
ai_ideas_enhancer/: __init__.py  config.py  idea.py  idea_processor.py  main.py
ai_ideas_enhancer/ai_adapter/: __init__.py  base.py  gemini.py
ai_ideas_enhancer/idea_enhancers/: __init__.py  ai_enhancer.py  ai_icon_generator.py  ai_title_generator.py  idea_enhancer.py
ai_ideas_enhancer/idea_manager_adapter/: __init__.py  base.py  notion.py
ai_ideas_enhancer/idea_manager_adapter/notion_middlewares/: __init__.py  icon_generator.py  middleware.py  open_page.py  title_generator.py
